--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href=/resources/assets/css/styles.css>
     <link type="application/atom+xml" rel="alternate" href="https://energysystemstudio.github.io/resources/feed.xml" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
 <title>About</title>
