--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Staff</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href=/resources/assets/css/styles.css>
     <link type="application/atom+xml" rel="alternate" href="https://energysystemstudio.github.io/resources/feed.xml" />
     <!-- Begin Jekyll SEO tag v2.8.0 -->
 <title>Staff</title>
@@ -37,14 +37,14 @@
 <ul>
   
     <li>
-      <h2><a href="/authors/jill.html">Jill Smith</a></h2>
+      <h2><a href="/resources/authors/jill.html">Jill Smith</a></h2>
       <h3>Chief Editor</h3>
       <p><p>Jill is an avid fruit grower based in the south of France.</p>
 </p>
     </li>
   
     <li>
-      <h2><a href="/authors/ted.html">Ted Doe</a></h2>
+      <h2><a href="/resources/authors/ted.html">Ted Doe</a></h2>
       <h3>Writer</h3>
       <p><p>Ted has been eating fruit since he was baby.</p>
 </p>
